--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,30 @@
     <title>Document title</title>
   </head>
   <body>
-    <h1>Pomodoro timer</h1>
-    <button type="button" data-run>Run</button>
-    <button disabled="disabled" data-pause>Pause</button>
-    <button disabled="disabled" data-play>Play</button>
-    <button disabled="disabled" data-destroy>Destroy</button>
-    <section>
-      <h2>What do</h2>
-      <p data-label></p>
-      <progress max="5" value="0" data-progress></progress>
-    </section>
-    <section>
-      <h2>Duration setings</h2>
-      <form action="/change-mode" method="GET" data-changeDuration>
-        <input type="text" name="pomodoro" value="5">
-        <input type="text" name="short-break" value="1">
-        <input type="text" name="long-break" value="6">
-        <button type="submit">Change</button>
-      </form>
-    </section>
+    <main>
+      <section>
+        <div class="container">
+          <h1>Pomodoro timer</h1>
+          <button type="button" data-run>Run</button>
+          <button disabled="disabled" data-pause>Pause</button>
+          <button disabled="disabled" data-play>Play</button>
+          <button disabled="disabled" data-destroy>Destroy</button>
+          <section>
+            <h2>What do</h2>
+            <p data-label></p>
+            <progress max="5" value="0" data-progress></progress>
+          </section>
+          <section>
+            <h2>Duration setings</h2>
+            <form action="/change-mode" method="GET" data-changeDuration>
+              <p><label>Pomodoro: <input type="text" name="pomodoro" value="5"></label></p>
+              <p><label>Short break: <input type="text" name="short-break" value="1"></label></p>
+              <p><label>Long break: <input type="text" name="long-break" value="6"></label></p>
+              <p><button type="submit">Change</button></p>
+            </form>
+          </section>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
