--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document title</title>
+    <title>The Pomodoro timer online – 25/5/30</title>
   </head>
   <body>
     <main>
@@ -60,6 +60,13 @@
           </p>
         </div>
       </section>
+      <footer class="page-footer">
+        <div class="container">
+          <h2 class="page-footer__title">The Pomodoro Technique</h2>
+          <p>The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. The technique uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks. Each interval is known as a pomodoro, from the Italian word for 'tomato', after the tomato-shaped kitchen timer that Cirillo used as a university student.</p>
+          <a class="wiki-link" href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">wiki</a>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
