--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                 <button type="submit" data-changeDurationBtn>{ t 'Change' }</button>
               </p>
             </form>
-          </p>
+          </section>
         </div>
       </section>
       <footer class="page-footer">
